# WebScraping

./: README.md  pyproject.toml
postcrawl/: post-.html  scrapy.cfg
postcrawl/postcrawl/: items.py  middlewares.py  pipelines.py  settings.py
postcrawl/postcrawl/spiders/: posy_spider.py
