[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["dorothybelle <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy3 = "^1.0.1"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
